# TiledPatternMaker

./: .gitignore  DOWNLOAD.md  DOWNLOAD_INSTALLER.md  README.md  release-notes.txt
src/: CMakeLists.txt  TiledPatternMaker.pro  afile.txt  afile.xlsx  icon.rc  main.cpp  resource.h  tiledpatternmaker.cpp  tiledpatternmaker.h  tpm.qrc
src/base/: border.cpp  border.h  canvas.cpp  canvas.h  canvasSettings.cpp  canvasSettings.h  canvas_settings.cpp  canvas_settings.h  colorset.cpp  colorset.h  configuration.cpp  configuration.h  cycler.cpp  cycler.h  design.cpp  design.h  designs.cpp  fileservices.cpp  fileservices.h  filldata.cpp  filldata.h  frame_settings.cpp  frame_settings.h  geo_graphics.cpp  geo_graphics.h  layer.cpp  layer.h  main.cpp  misc.cpp  misc.h  model_settings.cpp  model_settings.h  mosaic.cpp  mosaic.h  mosaic_loader.cpp  mosaic_loader.h  mosaic_manager.cpp  mosaic_manager.h  mosaic_writer.cpp  mosaic_writer.h  (+44 more)
src/designs/: design.cpp  design.h  design_control.cpp  design_control.h  design_maker.cpp  design_maker.h  designs.cpp  designs.h  patterns.cpp  patterns.h  shapefactory.cpp  shapefactory.h  shapes.cpp  shapes.h  tile.cpp  tile.h
src/engine/: compare_bmp_engine.cpp  compare_bmp_engine.h  image_engine.cpp  image_engine.h  mosaic_bmp_engine.cpp  mosaic_bmp_engine.h  mosaic_stepper.cpp  mosaic_stepper.h  png_stepper.cpp  png_stepper.h  stepping_engine.cpp  stepping_engine.h  tiling_bmp_engine.cpp  tiling_bmp_engine.h  tiling_stepper.cpp  tiling_stepper.h  version_stepper.cpp  version_stepper.h  worklist_stepper.cpp  worklist_stepper.h
src/enums/: eborder.cpp  eborder.h  ecyclemode.cpp  ecyclemode.h  edesign.cpp  edesign.h  edgetype.cpp  efigtype.cpp  efigtype.h  efilesystem.h  efillmode.cpp  efillmode.h  efilltype.h  ekeyboardmode.cpp  ekeyboardmode.h  elogmode.h  emapeditor.cpp  emapeditor.h  emotiftype.cpp  emotiftype.h  emousemode.h  estatemachineevent.cpp  estatemachineevent.h  estyletype.h  etilingmakermousemode.cpp  etilingmakermousemode.h  eviewtype.cpp  eviewtype.h
src/figures/: explicit_figure.cpp  explicit_figure.h  extended_rosette.cpp  extended_rosette.h  extended_star.cpp  extended_star.h  figure.cpp  figure.h  figure_connector.cpp  figure_connector.h  infer.cpp  infer.h  radial_figure.cpp  radial_figure.h  rosette.cpp  rosette.h  rosette_connect_figure.cpp  rosette_connect_figure.h  star.cpp  star.h  star_connect_figure.cpp  star_connect_figure.h
src/geometry/: Edge.cpp  Edge.h  Faces.cpp  Faces.h  FillRegion.cpp  FillRegion.h  Intersect.cpp  Intersect.h  Loose.cpp  Loose.h  Map.cpp  Map.h  Point.cpp  Point.h  Polygon.java  Rect.java  Transform.cpp  Transform.h  UnitCallback.h  Vertex.cpp  Vertex.h  arcdata.cpp  arcdata.h  belowandaboveedge.cpp  belowandaboveedge.h  bounds.cpp  bounds.h  circle.cpp  circle.h  colormaker.cpp  colormaker.h  crop.cpp  crop.h  dcel.cpp  dcel.h  debug_map.cpp  debug_map.h  edgepoly.cpp  edgepoly.h  facecycles.cpp  (+23 more)
src/legacy/: design.cpp  design.h  design_maker.cpp  design_maker.h  designs.cpp  designs.h  legacy_border.cpp  legacy_border.h  legacy_tile.cpp  legacy_tile.h  patterns.cpp  patterns.h  shapefactory.cpp  shapefactory.h  shapes.cpp  shapes.h
src/makers/: FeatureButton.cpp  FeatureButton.h  FeatureLauncher.cpp  FeatureLauncher.h  TilingDesigner.cpp  TilingDesigner.h  TilingSelection.cpp  TilingSelection.h  explicit_figure_editors.cpp  explicit_figure_editors.h  figure_editors.cpp  figure_editors.h  figure_maker.cpp  figure_maker.h  mapeditor.cpp  mapeditor.h  mapeditorselection.cpp  mapeditorselection.h  mapeditorstash.cpp  mapeditorstash.h  mapmouseactions.cpp  mapmouseactions.h  mapselection.cpp  mapselection.h  master_figure_editor.cpp  master_figure_editor.h  tilingmaker.cpp  tilingmaker.h  tilingmouseactions.cpp  tilingmouseactions.h
src/misc/: backgroundimage.cpp  backgroundimage.h  border.cpp  border.h  colorset.cpp  colorset.h  cycler.cpp  cycler.h  defaults.h  fileservices.cpp  fileservices.h  geo_graphics.cpp  geo_graphics.h  layer.cpp  layer.h  layer_controller.cpp  layer_controller.h  mark_x.cpp  mark_x.h  pugiconfig.hpp  pugixml.hpp  qtapplog.cpp  qtapplog.h  runguard.cpp  runguard.h  shortcuts.cpp  shortcuts.h  signal_blocker.h  sys.cpp  sys.h  tile_color_defs.h  timers.cpp  timers.h  tpm_io.h  tpmsplash.cpp  tpmsplash.h  unique_qvector.h  utilities.cpp  utilities.h  version.h
src/mosaic/: design_element.cpp  design_element.h  legacy_loader.cpp  legacy_loader.h  mosaic.cpp  mosaic.h  mosaic_io_base.cpp  mosaic_io_base.h  mosaic_manager.cpp  mosaic_manager.h  mosaic_reader.cpp  mosaic_reader.h  mosaic_reader_base.cpp  mosaic_reader_base.h  mosaic_writer.cpp  mosaic_writer.h  mosaic_writer_base.cpp  mosaic_writer_base.h  prototype.cpp  prototype.h
src/motifs/: explicit_map_motif.cpp  explicit_map_motif.h  explicit_motif.cpp  explicit_motif.h  extended_boundary.cpp  extended_boundary.h  extended_rosette.cpp  extended_rosette.h  extended_star.cpp  extended_star.h  extender.cpp  extender.h  girih_motif.cpp  girih_motif.h  hourglass_motif.cpp  hourglass_motif.h  inference_engine.cpp  inference_engine.h  inferred_motif.cpp  inferred_motif.h  intersect_motif.cpp  intersect_motif.h  irregular_girih_branches.cpp  irregular_girih_branches.h  irregular_motif.cpp  irregular_motif.h  irregular_rosette.cpp  irregular_rosette.h  irregular_star.cpp  irregular_star.h  irregular_star_branches.cpp  irregular_star_branches.h  irregular_tools.cpp  irregular_tools.h  motif.cpp  motif.h  motif_connector.cpp  motif_connector.h  radial_motif.cpp  radial_motif.h  (+14 more)
src/panels/: controlpanel.cpp  controlpanel.h  dlg_colorSet.cpp  dlg_colorSet.h  dlg_crop.cpp  dlg_crop.h  dlg_edgepoly_edit.cpp  dlg_edgepoly_edit.h  dlg_feature_edit.cpp  dlg_feature_edit.h  dlg_line_edit.cpp  dlg_line_edit.h  dlg_listnameselect.cpp  dlg_listnameselect.h  dlg_listselect.cpp  dlg_listselect.h  dlg_magnitude.cpp  dlg_magnitude.h  dlg_name.cpp  dlg_name.h  dlg_rebase.cpp  dlg_rebase.h  dlg_rename.cpp  dlg_rename.h  dlg_textedit.cpp  dlg_textedit.h  dlg_trim.cpp  dlg_trim.h  layout_qrectf.cpp  layout_qrectf.h  layout_sliderset.cpp  (+113 more)
(+2380 files in other folders)
