cmake_minimum_required(VERSION 3.5)

project(TiledPatternMaker LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets REQUIRED)
find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets REQUIRED)
find_package(QT NAMES Qt6 Qt5 COMPONENTS Svg REQUIRED)
find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Svg REQUIRED)

set(PROJECT_SOURCES
    enums/eborder.cpp
    enums/eborder.h
    enums/ecyclemode.cpp
    enums/ecyclemode.h
    enums/edesign.cpp
    enums/edesign.h
    enums/efigtype.cpp
    enums/efigtype.h
    enums/efilesystem.h
    enums/ekeyboardmode.cpp
    enums/ekeyboardmode.h
    enums/elogmode.h
    enums/emapeditor.cpp
    enums/emapeditor.h
    enums/emousemode.h
    enums/estatemachineevent.cpp
    enums/estatemachineevent.h
    enums/estyletype.h
    enums/etilingmakermousemode.cpp
    enums/etilingmakermousemode.h
    enums/eviewtype.cpp
    enums/eviewtype.h
    figures/explicit_figure.cpp
    figures/explicit_figure.h
    figures/extended_rosette.cpp
    figures/extended_rosette.h
    figures/extended_star.cpp
    figures/extended_star.h
    figures/figure.cpp
    figures/figure.h
    figures/figure_connector.cpp
    figures/figure_connector.h
    figures/infer.cpp
    figures/infer.h
    figures/radial_figure.cpp
    figures/radial_figure.h
    figures/rosette.cpp
    figures/rosette.h
    figures/rosette_connect_figure.cpp
    figures/rosette_connect_figure.h
    figures/star.cpp
    figures/star.h
    figures/star_connect_figure.cpp
    figures/star_connect_figure.h
    geometry/arcdata.cpp
    geometry/arcdata.h
    geometry/belowandaboveedge.cpp
    geometry/belowandaboveedge.h
    geometry/bounds.cpp
    geometry/bounds.h
    geometry/circle.cpp
    geometry/circle.h
    geometry/colormaker.cpp
    geometry/colormaker.h
    geometry/crop.cpp
    geometry/crop.h
    geometry/dcel.cpp
    geometry/dcel.h
    geometry/edge.cpp
    geometry/edge.h
    geometry/edgepoly.cpp
    geometry/edgepoly.h
    geometry/faces.cpp
    geometry/faces.h
    geometry/fill_region.cpp
    geometry/fill_region.h
    geometry/intersect.cpp
    geometry/intersect.h
    geometry/loose.cpp
    geometry/loose.h
    geometry/map.cpp
    geometry/map.h
    geometry/map_cleanse.cpp
    geometry/map_verify.cpp
    geometry/measurement.cpp
    geometry/measurement.h
    geometry/neighbours.cpp
    geometry/neighbours.h
    geometry/neighbour_map.cpp
    geometry/neighbour_map.h
    geometry/point.cpp
    geometry/point.h
    geometry/threads.cpp
    geometry/threads.h
    geometry/transform.cpp
    geometry/transform.h
    geometry/vertex.cpp
    geometry/vertex.h
    geometry/xform.cpp
    geometry/xform.h
    legacy/design.cpp
    legacy/design.h
    legacy/design_maker.cpp
    legacy/design_maker.h
    legacy/designs.cpp
    legacy/designs.h
    legacy/legacy_border.cpp
    legacy/legacy_border.h
    legacy/legacy_tile.cpp
    legacy/legacy_tile.h
    legacy/patterns.cpp
    legacy/patterns.h
    legacy/shapefactory.cpp
    legacy/shapefactory.h
    legacy/shapes.cpp
    legacy/shapes.h
    main.cpp
    makers/crop_maker/crop_maker.cpp
    makers/crop_maker/crop_maker.h
    makers/crop_maker/mouse_edit_border.cpp
    makers/crop_maker/mouse_edit_border.h
    makers/crop_maker/mouse_edit_crop.cpp
    makers/crop_maker/mouse_edit_crop.h
    makers/map_editor/map_editor.cpp
    makers/map_editor/map_editor.h
    makers/map_editor/map_editor_db.cpp
    makers/map_editor/map_editor_db.h
    makers/map_editor/map_editor_map_loader.cpp
    makers/map_editor/map_editor_map_loader.h
    makers/map_editor/map_editor_map_writer.cpp
    makers/map_editor/map_editor_map_writer.h
    makers/map_editor/map_editor_mouseactions.cpp
    makers/map_editor/map_editor_mouseactions.h
    makers/map_editor/map_editor_selection.cpp
    makers/map_editor/map_editor_selection.h
    makers/map_editor/map_editor_stash.cpp
    makers/map_editor/map_editor_stash.h
    makers/map_editor/map_selection.cpp
    makers/map_editor/map_selection.h
    makers/mosaic_maker/mosaic_maker.cpp
    makers/mosaic_maker/mosaic_maker.h
    makers/mosaic_maker/style_color_fill_group.cpp
    makers/mosaic_maker/style_color_fill_group.h
    makers/mosaic_maker/style_color_fill_set.cpp
    makers/mosaic_maker/style_color_fill_set.h
    makers/mosaic_maker/style_editors.cpp
    makers/mosaic_maker/style_editors.h
    makers/motif_maker/explicit_figure_editors.cpp
    makers/motif_maker/explicit_figure_editors.h
    makers/motif_maker/feature_button.cpp
    makers/motif_maker/feature_button.h
    makers/motif_maker/feature_selector.cpp
    makers/motif_maker/feature_selector.h
    makers/motif_maker/figure_editors.cpp
    makers/motif_maker/figure_editors.h
    makers/motif_maker/motif_editor.cpp
    makers/motif_maker/motif_editor.h
    makers/motif_maker/motif_maker.cpp
    makers/motif_maker/motif_maker.h
    makers/tiling_maker/feature_selection.cpp
    makers/tiling_maker/feature_selection.h
    makers/tiling_maker/tiling_maker.cpp
    makers/tiling_maker/tiling_maker.h
    makers/tiling_maker/tiling_mouseactions.cpp
    makers/tiling_maker/tiling_mouseactions.h
    misc/backgroundimage.cpp
    misc/backgroundimage.h
    misc/border.cpp
    misc/border.h
    misc/colorset.cpp
    misc/colorset.h
    misc/cycler.cpp
    misc/cycler.h
    misc/defaults.h
    misc/fileservices.cpp
    misc/fileservices.h
    misc/geo_graphics.cpp
    misc/geo_graphics.h
    misc/layer.cpp
    misc/layer.h
    misc/layer_controller.cpp
    misc/layer_controller.h
    misc/mark_x.cpp
    misc/mark_x.h
    misc/pugiconfig.hpp
    misc/pugixml.cpp
    misc/pugixml.hpp
    misc/qtapplog.cpp
    misc/qtapplog.h
    misc/shortcuts.cpp
    misc/shortcuts.h
    misc/signal_blocker.h
    misc/tpm_io.h
    misc/tpmsplash.cpp
    misc/timers.cpp
    misc/timers.h
    misc/unique_qvector.h
    misc/utilities.cpp
    misc/utilities.h
    misc/version.h
    mosaic/design_element.cpp
    mosaic/design_element.h
    mosaic/mosaic.cpp
    mosaic/mosaic.h
    mosaic/mosaic_manager.cpp
    mosaic/mosaic_manager.h
    mosaic/mosaic_reader.cpp
    mosaic/mosaic_reader.h
    mosaic/mosaic_reader_base.cpp
    mosaic/mosaic_reader_base.h
    mosaic/mosaic_writer.cpp
    mosaic/mosaic_writer.h
    mosaic/mosaic_writer_base.cpp
    mosaic/mosaic_writer_base.h
    mosaic/prototype.cpp
    mosaic/prototype.h
    panels/page_background_image.cpp
    panels/page_background_image.h
    panels/page_borders.cpp
    panels/page_borders.h
    panels/page_config.cpp
    panels/page_config.h
    panels/page_crop.cpp
    panels/page_crop.h
    panels/page_debug.cpp
    panels/page_debug.h
    panels/page_grid.cpp
    panels/page_grid.h
    panels/page_image_tools.cpp
    panels/page_image_tools.h
    panels/page_layers.cpp
    panels/page_layers.h
    panels/page_loaders.cpp
    panels/page_loaders.h
    panels/page_log.cpp
    panels/page_log.h
    panels/page_map_editor.cpp
    panels/page_map_editor.h
    panels/page_modelSettings.cpp
    panels/page_modelSettings.h
    panels/page_mosaic_maker.cpp
    panels/page_mosaic_maker.h
    panels/page_motif_maker.cpp
    panels/page_motif_maker.h
    panels/page_prototype_info.cpp
    panels/page_prototype_info.h
    panels/page_save.cpp
    panels/page_save.h
    panels/page_style_figure_info.cpp
    panels/page_style_figure_info.h
    panels/page_system_info.cpp
    panels/page_system_info.h
    panels/page_tiling_maker.cpp
    panels/page_tiling_maker.h
    panels/panel.cpp
    panels/panel.h
    panels/splitscreen.cpp
    panels/splitscreen.h
    settings/configuration.cpp
    settings/configuration.h
    settings/filldata.cpp
    settings/filldata.h
    settings/frame_settings.cpp
    settings/frame_settings.h
    settings/model_settings.cpp
    settings/model_settings.h
    settings/tristate.h
    style/colored.cpp
    style/colored.h
    style/emboss.cpp
    style/emboss.h
    style/filled.cpp
    style/filled.h
    style/interlace.cpp
    style/interlace.h
    style/outline.cpp
    style/outline.h
    style/plain.cpp
    style/plain.h
    style/sketch.cpp
    style/sketch.h
    style/style.cpp
    style/style.h
    style/thick.cpp
    style/thick.h
    style/tile_colors.cpp
    style/tile_colors.h
    tile/feature.cpp
    tile/feature.h
    tile/feature_reader.cpp
    tile/feature_reader.h
    tile/feature_writer.cpp
    tile/feature_writer.h
    tile/placed_feature.cpp
    tile/placed_feature.h
    tile/tiling.cpp
    tile/tiling.h
    tile/tiling_loader.cpp
    tile/tiling_loader.h
    tile/tiling_manager.cpp
    tile/tiling_manager.h
    tile/tiling_writer.cpp
    tile/tiling_writer.h
    tiledpatternmaker.cpp
    tiledpatternmaker.h
    viewers/grid.cpp
    viewers/grid.h
    viewers/border_view.cpp
    viewers/border_view.h
    viewers/crop_view.cpp
    viewers/crop_view.h
    viewers/map_editor_view.cpp
    viewers/map_editor_view.h
    viewers/motif_view.cpp
    viewers/motif_view.h
    viewers/measure_view.cpp
    viewers/measure_view.h
    viewers/prototype_view.cpp
    viewers/prototype_view.h
    viewers/shape_view.cpp
    viewers/shape_view.h
    viewers/tiling_maker_view.cpp
    viewers/tiling_maker_view.h
    viewers/tiling_view.cpp
    viewers/tiling_view.h
    viewers/view.cpp
    viewers/view.h
    viewers/viewcontrol.cpp
    viewers/viewcontrol.h
    viewers/viewerbase.cpp
    viewers/viewerbase.h
    widgets/crop_widget.h
    widgets/crop_widget.cpp
    widgets/dlg_colorSet.cpp
    widgets/dlg_colorSet.h
    widgets/dlg_edgepoly_edit.cpp
    widgets/dlg_edgepoly_edit.h
    widgets/dlg_line_edit.cpp
    widgets/dlg_line_edit.h
    widgets/dlg_listnameselect.cpp
    widgets/dlg_listnameselect.h
    widgets/dlg_listselect.cpp
    widgets/dlg_listselect.h
    widgets/dlg_magnitude.cpp
    widgets/dlg_magnitude.h
    widgets/dlg_name.cpp
    widgets/dlg_name.h
    widgets/dlg_push_select.h
    widgets/dlg_push_select.cpp
    widgets/dlg_rebase.cpp
    widgets/dlg_rebase.h
    widgets/dlg_rename.cpp
    widgets/dlg_rename.h
    widgets/dlg_textedit.cpp
    widgets/dlg_textedit.h
    widgets/dlg_trim.cpp
    widgets/dlg_trim.h
    widgets/image_layer.cpp
    widgets/image_layer.h
    widgets/layout_qrectf.cpp
    widgets/layout_qrectf.h
    widgets/layout_sliderset.cpp
    widgets/layout_sliderset.h
    widgets/layout_transform.cpp
    widgets/layout_transform.h
    widgets/memory_combo.cpp
    widgets/memory_combo.h
    widgets/mouse_mode_widget.cpp
    widgets/mouse_mode_widget.h
    widgets/panel_list_widget.cpp
    widgets/panel_list_widget.h
    widgets/panel_misc.cpp
    widgets/panel_misc.h
    widgets/panel_page.cpp
    widgets/panel_page.h
    widgets/panel_pagesWidget.cpp
    widgets/panel_pagesWidget.h
    widgets/panel_status.cpp
    widgets/panel_status.h
    widgets/rounded_polygon.cpp
    widgets/rounded_polygon.h
    widgets/transparentwidget.cpp
    widgets/transparentwidget.h
    widgets/versioned_list_widget.cpp
    widgets/versioned_list_widget.h
)

qt_add_resources(PROJECT_SOURCES tpm.qrc)

if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
    if (WIN32)
        qt_add_executable(TiledPatternMaker WIN32 MANUAL_FINALIZATION ${PROJECT_SOURCES} icon.rc)
    else()
        qt_add_executable(TiledPatternMaker MANUAL_FINALIZATION ${PROJECT_SOURCES} icon.rc)
    endif()
else()
    if (WIN32)
        add_executable(TiledPatternMaker  WIN32 ${PROJECT_SOURCES} icon.rc)
    else()
        add_executable(TiledPatternMaker  ${PROJECT_SOURCES} icon.rc)
    endif()
endif()

target_link_libraries(TiledPatternMaker PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
target_link_libraries(TiledPatternMaker PRIVATE Qt${QT_VERSION_MAJOR}::Svg)

if(QT_VERSION_MAJOR EQUAL 6)
    qt_finalize_executable(TiledPatternMaker)
endif()
