cmake_minimum_required(VERSION 3.5)

project(TiledPatternMaker LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)


set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets REQUIRED)
find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets REQUIRED)
find_package(QT NAMES Qt6 Qt5 COMPONENTS Svg REQUIRED)
find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Svg REQUIRED)

set(PROJECT_SOURCES
    enums/eborder.cpp
    enums/eborder.h
    enums/ecyclemode.cpp
    enums/ecyclemode.h
    enums/edesign.cpp
    enums/edesign.h
    enums/efillmode.cpp
    enums/efillmode.h
    enums/efilesystem.h
    enums/ekeyboardmode.cpp
    enums/ekeyboardmode.h
    enums/elogmode.h
    enums/emapeditor.cpp
    enums/emapeditor.h
    enums/emotiftype.cpp
    enums/emotiftype.h
    enums/emousemode.h
    enums/estatemachineevent.cpp
    enums/estatemachineevent.h
    enums/estyletype.h
    enums/etilingmakermousemode.cpp
    enums/etilingmakermousemode.h
    enums/eviewtype.cpp
    enums/eviewtype.h
    geometry/arcdata.cpp
    geometry/arcdata.h
    geometry/belowandaboveedge.cpp
    geometry/belowandaboveedge.h
    geometry/bounds.cpp
    geometry/bounds.h
    geometry/circle.cpp
    geometry/circle.h
    geometry/colormaker.cpp
    geometry/colormaker.h
    geometry/crop.cpp
    geometry/crop.h
    geometry/dcel.cpp
    geometry/dcel.h
    geometry/edge.cpp
    geometry/edge.h
    geometry/edgepoly.cpp
    geometry/edgepoly.h
    geometry/faces.cpp
    geometry/faces.h
    geometry/fill_region.cpp
    geometry/fill_region.h
    geometry/intersect.cpp
    geometry/intersect.h
    geometry/loose.cpp
    geometry/loose.h
    geometry/map.cpp
    geometry/map.h
    geometry/map_cleanse.cpp
    geometry/map_verify.cpp
    geometry/measurement.cpp
    geometry/measurement.h
    geometry/neighbour_map.cpp
    geometry/neighbour_map.h
    geometry/neighbours.cpp
    geometry/neighbours.h
    geometry/point.cpp
    geometry/point.h
    geometry/threads.cpp
    geometry/threads.h
    geometry/transform.cpp
    geometry/transform.h
    geometry/vertex.cpp
    geometry/vertex.h
    geometry/xform.cpp
    geometry/xform.h
    legacy/design.cpp
    legacy/design.h
    legacy/design_maker.cpp
    legacy/design_maker.h
    legacy/designs.cpp
    legacy/designs.h
    legacy/legacy_border.cpp
    legacy/legacy_border.h
    legacy/legacy_tile.cpp
    legacy/legacy_tile.h
    legacy/patterns.cpp
    legacy/patterns.h
    legacy/shapefactory.cpp
    legacy/shapefactory.h
    legacy/shapes.cpp
    legacy/shapes.h
    main.cpp
    makers/crop_maker/crop_maker.cpp
    makers/crop_maker/crop_maker.h
    makers/crop_maker/mouse_edit_border.cpp
    makers/crop_maker/mouse_edit_border.h
    makers/crop_maker/mouse_edit_crop.cpp
    makers/crop_maker/mouse_edit_crop.h
    makers/map_editor/map_editor.cpp
    makers/map_editor/map_editor.h
    makers/map_editor/map_editor_db.cpp
    makers/map_editor/map_editor_db.h
    makers/map_editor/map_editor_map_loader.cpp
    makers/map_editor/map_editor_map_loader.h
    makers/map_editor/map_editor_map_writer.cpp
    makers/map_editor/map_editor_map_writer.h
    makers/map_editor/map_editor_mouseactions.cpp
    makers/map_editor/map_editor_mouseactions.h
    makers/map_editor/map_editor_selection.cpp
    makers/map_editor/map_editor_selection.h
    makers/map_editor/map_editor_stash.cpp
    makers/map_editor/map_editor_stash.h
    makers/map_editor/map_selection.cpp
    makers/map_editor/map_selection.h
    makers/mosaic_maker/mosaic_maker.cpp
    makers/mosaic_maker/mosaic_maker.h
    makers/mosaic_maker/style_color_fill_group.cpp
    makers/mosaic_maker/style_color_fill_group.h
    makers/mosaic_maker/style_color_fill_set.cpp
    makers/mosaic_maker/style_color_fill_set.h
    makers/mosaic_maker/style_editors.cpp
    makers/mosaic_maker/style_editors.h
    makers/motif_maker/design_element_button.cpp
    makers/motif_maker/design_element_button.h
    makers/motif_maker/design_element_selector.cpp
    makers/motif_maker/design_element_selector.h
    makers/motif_maker/irregular_motif_editors.cpp
    makers/motif_maker/irregular_motif_editors.h
    makers/motif_maker/motif_editor_widget.cpp
    makers/motif_maker/motif_editor_widget.h
    makers/motif_maker/motif_maker_widget.cpp
    makers/motif_maker/motif_maker_widget.h
    makers/motif_maker/motif_maker_widgets.cpp
    makers/motif_maker/motif_maker_widgets.h
    makers/motif_maker/regular_motif_editors.cpp
    makers/motif_maker/regular_motif_editors.h
    makers/prototype_maker/prototype.cpp
    makers/prototype_maker/prototype.h
    makers/prototype_maker/prototype_data.cpp
    makers/prototype_maker/prototype_data.h
    makers/prototype_maker/prototype_maker.cpp
    makers/prototype_maker/prototype_maker.h
    makers/tiling_maker/tile_selection.cpp
    makers/tiling_maker/tile_selection.h
    makers/tiling_maker/tiling_maker.cpp
    makers/tiling_maker/tiling_maker.h
    makers/tiling_maker/tiling_mouseactions.cpp
    makers/tiling_maker/tiling_mouseactions.h
    misc/border.cpp
    misc/border.h
    misc/colorset.cpp
    misc/colorset.h
    misc/cycler.cpp
    misc/cycler.h
    misc/defaults.h
    misc/fileservices.cpp
    misc/fileservices.h
    misc/geo_graphics.cpp
    misc/geo_graphics.h
    misc/layer.cpp
    misc/layer.h
    misc/layer_controller.cpp
    misc/layer_controller.h
    misc/mark_x.cpp
    misc/mark_x.h
    misc/pugiconfig.hpp
    misc/pugixml.cpp
    misc/pugixml.hpp
    misc/qtapplog.cpp
    misc/qtapplog.h
    misc/runguard.cpp
    misc/runguard.h
    misc/shortcuts.cpp
    misc/shortcuts.h
    misc/signal_blocker.h
    misc/tile_color_defs.h
    misc/timers.cpp
    misc/timers.h
    misc/tpm_io.h
    misc/tpmsplash.cpp
    misc/unique_qvector.h
    misc/utilities.cpp
    misc/utilities.h
    misc/version.h
    mosaic/design_element.cpp
    mosaic/design_element.h
    mosaic/legacy_loader.cpp
    mosaic/legacy_loader.h
    mosaic/mosaic.cpp
    mosaic/mosaic.h
    mosaic/mosaic_io_base.cpp
    mosaic/mosaic_io_base.h
    mosaic/mosaic_manager.cpp
    mosaic/mosaic_manager.h
    mosaic/mosaic_reader.cpp
    mosaic/mosaic_reader.h
    mosaic/mosaic_reader_base.cpp
    mosaic/mosaic_reader_base.h
    mosaic/mosaic_writer.cpp
    mosaic/mosaic_writer.h
    mosaic/mosaic_writer_base.cpp
    mosaic/mosaic_writer_base.h
    motifs/extended_boundary.cpp
    motifs/extended_boundary.h
    motifs/extended_rosette.cpp
    motifs/extended_rosette.h
    motifs/extended_star.cpp
    motifs/extended_star.h
    motifs/extender.cpp
    motifs/extender.h
    motifs/girih_motif.cpp
    motifs/girih_motif.h
    motifs/hourglass_motif.cpp
    motifs/hourglass_motif.h
    motifs/inferred_motif.cpp
    motifs/inferred_motif.h
    motifs/intersect_motif.cpp
    motifs/intersect_motif.h
    motifs/irregular_girih_branches.cpp
    motifs/irregular_girih_branches.h
    motifs/irregular_motif.cpp
    motifs/irregular_motif.h
    motifs/irregular_rosette.cpp
    motifs/irregular_rosette.h
    motifs/irregular_star.cpp
    motifs/irregular_star.h
    motifs/irregular_star_branches.cpp
    motifs/irregular_star_branches.h
    motifs/irregular_tools.cpp
    motifs/irregular_tools.h
    motifs/explicit_map_motif.cpp
    motifs/explicit_map_motif.h
    motifs/motif.cpp
    motifs/motif.h
    motifs/motif_connector.cpp
    motifs/motif_connector.h
    motifs/radial_motif.cpp
    motifs/radial_motif.h
    motifs/rosette.cpp
    motifs/rosette.h
    motifs/rosette_connect.cpp
    motifs/rosette_connect.h
    motifs/star.cpp
    motifs/star.h
    motifs/star_connect.cpp
    motifs/star_connect.h
    motifs/tile_motif.cpp
    motifs/tile_motif.h
    panels/controlpanel.cpp
    panels/controlpanel.h
    panels/page_backgrounds.cpp
    panels/page_backgrounds.h
    panels/page_borders.cpp
    panels/page_borders.h
    panels/page_config.cpp
    panels/page_config.h
    panels/page_crop_maker.cpp
    panels/page_crop_maker.h
    panels/page_debug.cpp
    panels/page_debug.h
    panels/page_grid.cpp
    panels/page_grid.h
    panels/page_image_tools.cpp
    panels/page_image_tools.h
    panels/page_layers.cpp
    panels/page_layers.h
    panels/page_loaders.cpp
    panels/page_loaders.h
    panels/page_log.cpp
    panels/page_log.h
    panels/page_map_editor.cpp
    panels/page_map_editor.h
    panels/page_modelSettings.cpp
    panels/page_modelSettings.h
    panels/page_mosaic_info.cpp
    panels/page_mosaic_info.h
    panels/page_mosaic_maker.cpp
    panels/page_mosaic_maker.h
    panels/page_motif_maker.cpp
    panels/page_motif_maker.h
    panels/page_prototype_info.cpp
    panels/page_prototype_info.h
    panels/page_save.cpp
    panels/page_save.h
    panels/page_system_info.cpp
    panels/page_system_info.h
    panels/page_tiling_maker.cpp
    panels/page_tiling_maker.h
    panels/panel_page_controller.cpp
    panels/panel_page_controller.h
    panels/panel_page_list_widget.cpp
    panels/panel_page_list_widget.h
    panels/panel_misc.cpp
    panels/panel_misc.h
    panels/panel_page.cpp
    panels/panel_page.h
    panels/panel_pages_widget.cpp
    panels/panel_pages_widget.h
    panels/panel_status.cpp
    panels/panel_status.h
    panels/panel_view_select.cpp
    panels/panel_view_select.h
    panels/splitscreen.cpp
    panels/splitscreen.h
    settings/configuration.cpp
    settings/configuration.h
    settings/filldata.cpp
    settings/filldata.h
    settings/model_settings.cpp
    settings/model_settings.h
    settings/tristate.h
    settings/view_settings.cpp
    settings/view_settings.h
    style/colored.cpp
    style/colored.h
    style/emboss.cpp
    style/emboss.h
    style/filled.cpp
    style/filled.h
    style/interlace.cpp
    style/interlace.h
    style/outline.cpp
    style/outline.h
    style/plain.cpp
    style/plain.h
    style/sketch.cpp
    style/sketch.h
    style/style.cpp
    style/style.h
    style/thick.cpp
    style/thick.h
    style/tile_colors.cpp
    style/tile_colors.h
    tile/placed_tile.cpp
    tile/placed_tile.h
    tile/tile.cpp
    tile/tile.h
    tile/tile_reader.cpp
    tile/tile_reader.h
    tile/tile_writer.cpp
    tile/tile_writer.h
    tile/tiling.cpp
    tile/tiling.h
    tile/tiling_data.cpp
    tile/tiling_data.h
    tile/tiling_loader.cpp
    tile/tiling_loader.h
    tile/tiling_manager.cpp
    tile/tiling_manager.h
    tile/tiling_writer.cpp
    tile/tiling_writer.h
    tiledpatternmaker.cpp
    tiledpatternmaker.h
    viewers/backgroundimageview.cpp
    viewers/backgroundimageview.h
    viewers/border_view.cpp
    viewers/border_view.h
    viewers/crop_view.cpp
    viewers/crop_view.h
    viewers/grid_view.cpp
    viewers/grid_view.h
    viewers/map_editor_view.cpp
    viewers/map_editor_view.h
    viewers/measure_view.cpp
    viewers/measure_view.h
    viewers/motif_view.cpp
    viewers/motif_view.h
    viewers/prototype_view.cpp
    viewers/prototype_view.h
    viewers/shape_view.cpp
    viewers/shape_view.h
    viewers/tiling_maker_view.cpp
    viewers/tiling_maker_view.h
    viewers/tiling_view.cpp
    viewers/tiling_view.h
    viewers/view.cpp
    viewers/view.h
    viewers/viewcontrol.cpp
    viewers/viewcontrol.h
    viewers/viewerbase.cpp
    viewers/viewerbase.h
    widgets/crop_widget.cpp
    widgets/crop_widget.h
    widgets/dlg_colorSet.cpp
    widgets/dlg_colorSet.h
    widgets/dlg_edgepoly_edit.cpp
    widgets/dlg_edgepoly_edit.h
    widgets/dlg_line_edit.cpp
    widgets/dlg_line_edit.h
    widgets/dlg_listnameselect.cpp
    widgets/dlg_listnameselect.h
    widgets/dlg_listselect.cpp
    widgets/dlg_listselect.h
    widgets/dlg_cleanse.cpp
    widgets/dlg_cleanse.h
    widgets/dlg_magnitude.cpp
    widgets/dlg_magnitude.h
    widgets/dlg_name.cpp
    widgets/dlg_name.h
    widgets/dlg_push_select.cpp
    widgets/dlg_push_select.h
    widgets/dlg_rebase.cpp
    widgets/dlg_rebase.h
    widgets/dlg_rename.cpp
    widgets/dlg_rename.h
    widgets/dlg_textedit.cpp
    widgets/dlg_textedit.h
    widgets/dlg_trim.cpp
    widgets/dlg_trim.h
    widgets/dlg_wlist_create.cpp
    widgets/dlg_wlist_create.h
    widgets/image_layer.cpp
    widgets/image_layer.h
    widgets/layout_qrectf.cpp
    widgets/layout_qrectf.h
    widgets/layout_sliderset.cpp
    widgets/layout_sliderset.h
    widgets/layout_transform.cpp
    widgets/layout_transform.h
    widgets/memory_combo.cpp
    widgets/memory_combo.h
    widgets/mouse_mode_widget.cpp
    widgets/mouse_mode_widget.h
    widgets/rounded_polygon.cpp
    widgets/rounded_polygon.h
    widgets/transparentwidget.cpp
    widgets/transparentwidget.h
    widgets/version_dialog.cpp
    widgets/version_dialog.h
    widgets/versioned_list_widget.cpp
    widgets/versioned_list_widget.h
    widgets/worklist_widget.cpp
    widgets/worklist_widget.h
)

set (OTHER_FILES
    ../etc/windows/aliases.txt
    ../etc/windows/binfo
    ../etc/windows/branches
    ../etc/windows/bstate
    ../etc/windows/build-install.md
    ../etc/windows/build-install-qt6.md
    ../etc/windows/configure-local.bat
    ../etc/windows/qt5.bat
    ../etc/windows/qt6.bat
    ../etc/linux/aliases.txt
    ../etc/linux/binfo
    ../etc/linux/branches
    ../etc/linux/bstate
    ../etc/linux/build-install.md
    ../etc/linux/build-install-qt6.md
    ../etc/linux/configure-local
    ../etc/TiledPatternMaker.nsi
    ../etc/models/Components.qmodel
    ../etc/models/designeditor.qmodel
    ../etc/models/Designs.qmodel
    ../etc/models/figure_editors.qmodel
    ../etc/models/figures.qmodel
    ../etc/models/makers.qmodel
    ../etc/models/makers2.qmodel
    ../etc/models/mosaic.qmodel
    ../etc/models/shapes.qmodel
    ../etc/models/styles.qmodel
    ../etc/models/Viewers.qmodel
    ../release-notes.txt
)

add_custom_target(Xtra-files SOURCES ${OTHER_FILES})

qt_add_resources(PROJECT_SOURCES tpm.qrc)

if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
    set(CMAKE_UNITY_BUILD ON)
    if (WIN32)
        qt_add_executable(TiledPatternMaker WIN32 MANUAL_FINALIZATION ${PROJECT_SOURCES} icon.rc)
    else()
        qt_add_executable(TiledPatternMaker MANUAL_FINALIZATION ${PROJECT_SOURCES} icon.rc)
    endif()
else()
    if (WIN32)
        add_executable(TiledPatternMaker  WIN32 ${PROJECT_SOURCES} icon.rc)
    else()
        add_executable(TiledPatternMaker  ${PROJECT_SOURCES} icon.rc)
    endif()
endif()

target_link_libraries(TiledPatternMaker PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
target_link_libraries(TiledPatternMaker PRIVATE Qt${QT_VERSION_MAJOR}::Svg)

if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
    qt_finalize_executable(TiledPatternMaker)
endif()
